--- a/security/src/main/resources/static/index.html
+++ b/security/src/main/resources/static/index.html
@@ -1,74 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encrypt String</title>
+    <title>Landing Page</title>
+    <!-- Bootstrap CSS -->
+    <link
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
+            background-color: #f8f9fa;
         }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+        .navbar {
+            margin-bottom: 20px;
         }
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+        .jumbotron {
+            background: url('https://via.placeholder.com/1500x500') no-repeat center center;
+            background-size: cover;
+            color: white;
+            text-shadow: 2px 2px 4px #000000;
         }
-        button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            background-color: #28a745;
-            color: #fff;
-            cursor: pointer;
+        .jumbotron h1 {
+            font-size: 4rem;
         }
-        button:hover {
-            background-color: #218838;
-        }
-        .result {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #e9ecef;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+        .content-section {
+            padding: 60px 0;
         }
     </style>
-    <script>
-        async function encryptString() {
-            const input = document.getElementById('inputString').value;
-            if (input) {
-                const response = await fetch(`/encrypt?input=${encodeURIComponent(input)}`);
-                if (response.ok) {
-                    const encrypted = await response.text();
-                    document.getElementById('result').innerText = encrypted;
-                } else {
-                    document.getElementById('result').innerText = 'Error encrypting string.';
-                }
-            } else {
-                document.getElementById('result').innerText = 'Please enter a string to encrypt.';
-            }
-        }
-    </script>
 </head>
 <body>
-<div class="container">
-    <h1>Encrypt String</h1>
-    <input type="text" id="inputString" placeholder="Enter string to encrypt">
-    <button onclick="encryptString()">Encrypt</button>
-    <div class="result" id="result"></div>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">MyApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signup">Sign Up</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!-- Jumbotron -->
+<div class="jumbotron jumbotron-fluid text-center">
+    <div class="container">
+        <h1 class="display-4">Welcome to MyApp</h1>
+        <p class="lead">A modern application with secure authentication and much more.</p>
+        <a href="/signup" class="btn btn-primary btn-lg">Get Started</a>
+    </div>
 </div>
+
+<!-- Content Section -->
+<div class="container content-section text-center">
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Feature One</h2>
+            <p>Detail about feature one. Explain why it's great and how users can benefit from it.</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Feature Two</h2>
+            <p>Detail about feature two. Highlight the key aspects and its advantages.</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Feature Three</h2>
+            <p>Detail about feature three. Emphasize its uniqueness and importance.</p>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2024 MyApp. All rights reserved.</p>
+</footer>
+
+<!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
