--- a/html/index.html
+++ b/html/index.html
@@ -1,79 +1,28 @@
 <!DOCTYPE html>
 <html lang="da">
 
-<style>
-  header {
-    background: url('hashojskolen.png') no-repeat center center/cover;
-    color: #000;
-  }
 
-
-  body {
-    background-color: #343a40 !important; /* Light gray background for the whole page */
-    color: #fff; /* Dark text for readability */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Professional font */
-  }
-
-
-  #vennekredsen {
-    background-color: #555; /* White background for a clean look */
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-  }
-
-  #vennekredsen h2 {
-    color: #fff; /* Blue color to match the hero section */
-  }
-
-  #vennekredsen p.lead {
-    font-size: 1.25rem;
-    font-weight: 300;
-    color: #fff;
-  }
-
-  #vennekredsen p {
-    color: #fff;
-    line-height: 1.6;
-  }
-
-</style>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vennekredsen - Hashøjskolen</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <!--  <link rel="stylesheet" href="style.css">-->
 </head>
-<body>
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">Vennekredsen</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Hjem</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">Om Os</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
-<!-- Hero Section -->
-<header id="header" class="bg-primary text-black text-center py-5 mb-4">
-  <div class="container">
-    <h1 class="display-4">Vennekredsen: En Støttegruppe for Hashøjskolens Børn</h1>
-    <p class="lead">Dedikeret til at forbedre hverdagen for børnene på Hashøjskolen i Slots Bjergby.</p>
-  </div>
-</header>
+<body>
+  <!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("navbar.html");
+});
+</script>
+
 
 <!-- Main Content -->
 <main class="container">
@@ -81,23 +30,12 @@
   <section id="vennekredsen" class="mb-5">
     <div class="text-center">
       <h2>Om Vennekredsen</h2>
-      <p class="lead">Vennekredsen er en engageret støttegruppe, der arbejder dedikeret for at skabe bedre muligheder
-        for børnene på Hashøjskolen i Slots Bjergby.</p>
+      <p class="lead">Vennekredsen er en engageret støttegruppe, der arbejder dedikeret for at skabe bedre muligheder for børnene på Hashøjskolen i Slots Bjergby. Gruppen består af frivillige, som alle er forældre til børn på skolen, hvilket skaber en stærk forbindelse mellem støttegruppens arbejde og elevernes hverdag.</p>
     </div>
-    <p>Gruppen samler penge ind til at støtte forskellige aktiviteter og faciliteter, der gør hverdagen både sjovere og
-      mere lærerig for skolens elever.</p>
-    <p>De midler, som Vennekredsen indsamler, bliver brugt til en række formål, der alle har til hensigt at berige
-      børnenes skoleoplevelse. Pengene går blandt andet til kreative lege, der stimulerer børnenes fantasi og sociale
-      færdigheder, samt til indkøb af køleskabe, så eleverne kan opbevare deres madpakker forsvarligt. Derudover
-      bidrager støttegruppen også økonomisk til skolens lejrture, hvilket giver alle børn mulighed for at deltage,
-      uanset deres families økonomiske situation.</p>
-    <p>Vennekredsen tjener penge gennem tre årlige fester, som de arrangerer for skolens børn. Disse fester inkluderer
-      en sommerfest, en julefest og en fastelavnsfest med luciaoptog. Udover at skabe glæde og fællesskab blandt
-      eleverne, bidrager festerne også til at samle penge ind. Gennem disse arrangementer formår Vennekredsen at
-      indsamle mellem 10.000 og 15.000 kr. årligt. Disse midler er en vigtig økonomisk støtte for at forbedre midlerne
-      for de børn, der går på skolen.</p>
-    <p>Med Vennekredsens indsats sikres det, at alle børn på Hashøjskolen får mulighed for at deltage i aktiviteter, der
-      udvikler dem både fagligt og socialt, og som giver dem minder for livet.</p>
+    <p>Gruppen samler penge ind til at støtte forskellige aktiviteter og faciliteter, der gør hverdagen både sjovere og mere lærerig for skolens elever.</p>
+    <p>De midler, som Vennekredsen indsamler, bliver brugt til en række formål, der alle har til hensigt at berige børnenes skoleoplevelse. Pengene går blandt andet til kreative lege, der stimulerer børnenes fantasi og sociale færdigheder. Derudover bidrager støttegruppen også økonomisk til skolens lejrture, hvilket giver alle børn mulighed for at deltage, uanset deres families økonomiske situation.</p>
+    <p>Vennekredsen tjener penge gennem tre årlige fester, som de arrangerer for skolens børn. Disse fester inkluderer en sommerfest, en julefest og en fastelavnsfest. Udover at skabe glæde og fællesskab blandt eleverne, bidrager festerne også til at samle penge ind. Gennem disse arrangementer formår Vennekredsen at indsamle mellem 10.000 og 15.000 kr. årligt. Disse midler er en vigtig økonomisk støtte for at forbedre midlerne for de børn, der går på skolen.</p>
+    <p>Med Vennekredsens indsats sikres det, at alle børn på Hashøjskolen får mulighed for at deltage i aktiviteter, der udvikler dem både fagligt og socialt, og som giver dem minder for livet.</p>
   </section>
 </main>
 
