--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,8 @@ $(function(){
   <!-- Vennekredsen Description Section -->
   <section id="vennekredsen" class="mb-5">
     <div class="text-center">
-      <h2>Om Vennekredsen</h2>
+      <h2>Vennekredsen</h2>
+      <h3>Støttekreds for børn på Hashøjskolen</h3>
       <p class="lead">Vennekredsen er en engageret støttegruppe, der arbejder dedikeret for at skabe bedre muligheder for børnene på Hashøjskolen i Slots Bjergby. Gruppen består af frivillige, som alle er forældre til børn på skolen, hvilket skaber en stærk forbindelse mellem støttegruppens arbejde og elevernes hverdag.</p>
     </div>
     <p>Gruppen samler penge ind til at støtte forskellige aktiviteter og faciliteter, der gør hverdagen både sjovere og mere lærerig for skolens elever.</p>
