--- a/html/about.html
+++ b/html/about.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-  <!DOCTYPE html>
-  <html lang="da">
-  
-  
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vennekredsen - Hashøjskolen</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  </head>
-  
-  <body>
-    <!--Navigation bar-->
-  <div id="nav-placeholder">
-  
-  </div>
-  
-  <script>
-  $(function(){
+<!DOCTYPE html>
+<html lang="da">
+
+
+<head>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Vennekredsen - Hashøjskolen</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+</head>
+
+<body>
+<!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+  $(function () {
     $("#nav-placeholder").load("navbar.html");
   });
-  </script>
-
+</script>
 
 
 <main class="container my-4">
-  <section id="vennekredsen" class="mb-5">
+  <section class="mb-5" id="vennekredsen">
     <h2 class="text-center">Vores Mål</h2>
     <p class="center-text">Vennekredsen har som formål at skabe en inkluderende og berigende skoleoplevelse for alle
       børn på Hashøjskolen.</p>
