--- a/html/index.html
+++ b/html/index.html
@@ -4,39 +4,50 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vennekredsen - Hashøjskolen</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<!--  <link rel="stylesheet" href="style.css">-->
+  <!--  <link rel="stylesheet" href="style.css">-->
 </head>
 
 <body>
-  <!--Navigation bar-->
+<!--Navigation bar-->
 <div id="nav-placeholder">
 
 </div>
 
 <script>
-$(function(){
-  $("#nav-placeholder").load("navbar.html");
-});
+  $(function () {
+    $("#nav-placeholder").load("navbar.html");
+  });
 </script>
 
 
 <!-- Main Content -->
 <main class="container">
   <!-- Vennekredsen Description Section -->
-  <section id="vennekredsen" class="mb-5">
+  <section class="mb-5" id="vennekredsen">
     <div class="text-center">
       <h2>Vennekredsen</h2>
       <h3>Støttekreds for børn på Hashøjskolen</h3>
-      <p class="lead">Vennekredsen er en engageret støttegruppe, der arbejder dedikeret for at skabe bedre muligheder for børnene på Hashøjskolen i Slots Bjergby. Gruppen består af frivillige, som alle er forældre til børn på skolen, hvilket skaber en stærk forbindelse mellem støttegruppens arbejde og elevernes hverdag.</p>
+      <p class="lead">Vennekredsen er en engageret støttegruppe, der arbejder dedikeret for at skabe bedre muligheder
+        for børnene på Hashøjskolen i Slots Bjergby. Gruppen består af frivillige, som alle er forældre til børn på
+        skolen, hvilket skaber en stærk forbindelse mellem støttegruppens arbejde og elevernes hverdag.</p>
     </div>
-    <p>Gruppen samler penge ind til at støtte forskellige aktiviteter og faciliteter, der gør hverdagen både sjovere og mere lærerig for skolens elever.</p>
-    <p>De midler, som Vennekredsen indsamler, bliver brugt til en række formål, der alle har til hensigt at berige børnenes skoleoplevelse. Pengene går blandt andet til kreative lege, der stimulerer børnenes fantasi og sociale færdigheder. Derudover bidrager støttegruppen også økonomisk til skolens lejrture, hvilket giver alle børn mulighed for at deltage, uanset deres families økonomiske situation.</p>
-    <p>Vennekredsen tjener penge gennem tre årlige fester, som de arrangerer for skolens børn. Disse fester inkluderer en sommerfest, en julefest og en fastelavnsfest. Udover at skabe glæde og fællesskab blandt eleverne, bidrager festerne også til at samle penge ind. Gennem disse arrangementer formår Vennekredsen at indsamle mellem 10.000 og 15.000 kr. årligt. Disse midler er en vigtig økonomisk støtte for at forbedre midlerne for de børn, der går på skolen.</p>
-    <p>Med Vennekredsens indsats sikres det, at alle børn på Hashøjskolen får mulighed for at deltage i aktiviteter, der udvikler dem både fagligt og socialt, og som giver dem minder for livet.</p>
+    <p>Gruppen samler penge ind til at støtte forskellige aktiviteter og faciliteter, der gør hverdagen både sjovere og
+      mere lærerig for skolens elever.</p>
+    <p>De midler, som Vennekredsen indsamler, bliver brugt til en række formål, der alle har til hensigt at berige
+      børnenes skoleoplevelse. Pengene går blandt andet til kreative lege, der stimulerer børnenes fantasi og sociale
+      færdigheder. Derudover bidrager støttegruppen også økonomisk til skolens lejrture, hvilket giver alle børn
+      mulighed for at deltage, uanset deres families økonomiske situation.</p>
+    <p>Vennekredsen tjener penge gennem tre årlige fester, som de arrangerer for skolens børn. Disse fester inkluderer
+      en sommerfest, en julefest og en fastelavnsfest. Udover at skabe glæde og fællesskab blandt eleverne, bidrager
+      festerne også til at samle penge ind. Gennem disse arrangementer formår Vennekredsen at indsamle mellem 10.000 og
+      15.000 kr. årligt. Disse midler er en vigtig økonomisk støtte for at forbedre midlerne for de børn, der går på
+      skolen.</p>
+    <p>Med Vennekredsens indsats sikres det, at alle børn på Hashøjskolen får mulighed for at deltage i aktiviteter, der
+      udvikler dem både fagligt og socialt, og som giver dem minder for livet.</p>
   </section>
 </main>
 
