--- a/html/contact.html
+++ b/html/contact.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vennekredsen - Hashøjskolen</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"> <!-- Custom CSS -->
+  <link href="style.css" rel="stylesheet"> <!-- Custom CSS -->
 </head>
 
 <body>
@@ -14,8 +14,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="index.html">Vennekredsen</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarNav" data-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,22 +43,22 @@
 </header>
 
 <main class="container my-4">
-  <section id="vennekredsen" class="mb-5">
+  <section class="mb-5" id="vennekredsen">
     <h2 class="text-center">Kontakt os</h2>
-    <form id="contactForm" class="mx-auto" style="max-width: 500px;">
+    <form class="mx-auto" id="contactForm" style="max-width: 500px;">
       <div class="form-group">
         <label for="name">Name:</label>
-        <input type="text" class="form-control" id="name" name="name" required>
+        <input class="form-control" id="name" name="name" required type="text">
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" name="email" required>
+        <input class="form-control" id="email" name="email" required type="email">
       </div>
       <div class="form-group">
         <label for="message">Message:</label>
-        <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+        <textarea class="form-control" id="message" name="message" required rows="5"></textarea>
       </div>
-      <button type="submit" class="btn btn-dark btn-block">Submit</button>
+      <button class="btn btn-dark btn-block" type="submit">Submit</button>
     </form>
   </section>
 </main>
@@ -67,9 +67,9 @@
 <footer class="bg-dark text-white text-center py-4">
   <p>&copy; 2024 Vennekredsen. Alle rettigheder forbeholdes.</p>
   <p>Følg os på
-    <a href="#" class="text-white">Facebook</a>,
-    <a href="#" class="text-white">Twitter</a>, og
-    <a href="#" class="text-white">LinkedIn</a>.
+    <a class="text-white" href="#">Facebook</a>,
+    <a class="text-white" href="#">Twitter</a>, og
+    <a class="text-white" href="#">LinkedIn</a>.
   </p>
 </footer>
 
