--- a/html/navbar.html
+++ b/html/navbar.html
@@ -15,13 +15,6 @@
   }
 
 
-  #vennekredsen {
-    background-color: #555; /* White background for a clean look */
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-  }
-
   #vennekredsen h2 {
     color: #fff; /* Blue color to match the hero section */
   }
@@ -36,17 +29,7 @@
     text-align: center;
   }
 
-  p.lead {
-    font-size: 1.25rem;
-    font-weight: 300;
-    color: #fff;
-  }
 
-  #vennekredsen p.lead {
-    font-size: 1.25rem;
-    font-weight: 300;
-    color: #fff;
-  }
 
   #vennekredsen p {
     color: #fff;
@@ -56,7 +39,7 @@
 </style>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vennekredsen - Hashøjskolen</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -65,8 +48,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="index.html">Vennekredsen</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarNav" data-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -86,7 +69,7 @@
 </nav>
 
 <!-- Hero Section -->
-<header id="header" class="bg-primary text-black text-center py-5 mb-4">
+<header class="bg-primary text-black text-center py-5 mb-4" id="header">
   <div class="container">
     <h1>Vennekredsen: En Støttegruppe for Hashøjskolens Børn</h1>
     <p class="lead">Dedikeret til at forbedre hverdagen for børnene på Hashøjskolen i Slots Bjergby.</p>
