--- a/html/tilmelding.html
+++ b/html/tilmelding.html
@@ -4,30 +4,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vennekredsen - Hashøjskolen</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<!--  <link rel="stylesheet" href="style.css">-->
+  <!--  <link rel="stylesheet" href="style.css">-->
 </head>
 
 <body>
-  <!--Navigation bar-->
+<!--Navigation bar-->
 <div id="nav-placeholder">
 
 </div>
 
 <script>
-$(function(){
-  $("#nav-placeholder").load("navbar.html");
-});
+  $(function () {
+    $("#nav-placeholder").load("navbar.html");
+  });
 </script>
 
 
 <!-- Main Content -->
 <main class="container">
   <!-- Vennekredsen Description Section -->
-  <section id="vennekredsen" class="mb-5">
+  <section class="mb-5" id="vennekredsen">
     <div class="text-center">
       <h2>Tilmelding til Fest</h2>
       <p class="lead">Vennekredsen står for at arrangere fest.</p>
@@ -35,7 +35,7 @@ $(function(){
       <a href="https://forms.gle/usuigiv7wiVTLtiz6"> Tilmeld her</a>
       <p>Vi glæder os til at se dig!</p>
     </div>
-    <p >Alle penge som Vennekredsen tjener bruges på de børn som går på Hashøjskolen</p>
+    <p>Alle penge som Vennekredsen tjener bruges på de børn som går på Hashøjskolen</p>
   </section>
 </main>
 
