--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,47 +1,32 @@
 <!DOCTYPE html>
 <html lang="da">
-
-<style>
-  header {
-    background: url('skole.png') no-repeat center center/cover !important;
-    color: #000;
-  }
-
-
-  body {
-    background-color: #343a40 !important; /* Light gray background for the whole page */
-    color: #fff; /* Dark text for readability */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Professional font */
-  }
-
-
-  #vennekredsen h2 {
-    color: #fff; /* Blue color to match the hero section */
-  }
-
-  h1, h2, h3, h4, h5, h6 {
-    color: #fff; /* White text for all headings */
-  }
-
-  p {
-    color: #fff;
-    line-height: 1.6;
-    text-align: center;
-  }
-
-
-
-  #vennekredsen p {
-    color: #fff;
-    line-height: 1.6;
-    text-align: center;
-  }
-</style>
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Vennekredsen - Hashøjskolen</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    header {
+      background: url('skole.png') no-repeat center center/cover !important;
+      color: #000;
+    }
+
+    body {
+      background-color: #343a40 !important;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      color: #fff;
+    }
+
+    p {
+      color: #fff;
+      line-height: 1.6;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 <!-- Navigation Bar -->
@@ -76,6 +61,9 @@
   </div>
 </header>
 
-
+<!-- Required JavaScript -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
