--- a/html/tilmelding.html
+++ b/html/tilmelding.html
@@ -32,7 +32,12 @@
       <h2>Tilmelding til Fest</h2>
       <p class="lead">Vennekredsen står for at arrangere fest.</p>
       <p>Vi vil gerne invitere dig til at deltage i festen. Tilmeld dig venligst herunder.</p>
-      <a href="https://forms.gle/usuigiv7wiVTLtiz6"> Tilmeld her</a>
+      <h3>Hashøj IF og Vennekredsen:</h3>
+      <p> Samarbejde for et stærkt lokalsamfund Hashøj Idrætsforening (Hashøj IF) og Vennekredsen har begge en vigtig rolle i vores lokalområde.
+        Ved at styrke samarbejdet mellem disse os kan vi skabe endnu flere muligheder og aktiviteter for beboerne.
+        Vennekredsen benytter derfor Hashøj IF tilmeldings platform.</p>
+      <h2><a href="https://hashoej-if.dk/"> TILMELD HER!</a></h2>
+      <p><u> Tilmelding under events</u></p>
       <p>Vi glæder os til at se dig!</p>
     </div>
     <p>Alle penge som Vennekredsen tjener bruges på de børn som går på Hashøjskolen</p>
