--- a/frontend/html/navbar.html
+++ b/frontend/html/navbar.html
@@ -62,8 +62,8 @@
           <li class="nav-item">
             <a class="nav-link" href="ansogning.html">Søg støtte</a>
           </li>
-          <li class="nav-item" id="adminNavItem">
-            <!-- Login/logout button will be inserted here -->
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login</a>
           </li>
         </ul>
       </div>
