--- a/frontend/html/about.html
+++ b/frontend/html/about.html
@@ -1,48 +1,84 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="da">
-
 
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Vennekredsen - Hashøjskolen</title>
+  <title>Om Os - Vennekredsen for Hashøjskolen</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
 <body>
-<!--Navigation bar-->
-<div id="nav-placeholder">
+  <!--Navigation bar-->
+  <div id="nav-placeholder">
 
-</div>
+  </div>
 
-<script>
-  $(function () {
-    $("#nav-placeholder").load("navbar.html");
-  });
-</script>
+  <script>
+    $(function () {
+      $("#nav-placeholder").load("navbar.html", function() {
+        // Initialize login button after navbar is loaded
+        if (typeof initializeLoginButton === 'function') {
+          initializeLoginButton();
+        } else {
+          $.getScript("login-button.js");
+        }
+      });
+    });
+  </script>
 
+  <main class="container my-5">
+    <section id="vennekredsen" class="mb-5">
+      <div class="text-center mb-4">
+        <h2>Vores Mål</h2>
+        <p class="lead">Vennekredsen arbejder for at alle børn på Hashøjskolen får lige muligheder</p>
+      </div>
 
-<main class="container my-4">
-  <section class="mb-5" id="vennekredsen">
-    <h2 class="text-center">Vores Mål</h2>
-    <p class="center-text">Vennekredsen har som formål at skabe en inkluderende og berigende skoleoplevelse for alle
-      børn på Hashøjskolen.</p>
-    <p class="center-text">Vi arbejder målrettet for at sikre, at ingen elever udelukkes fra skolens aktiviteter på
-      grund af økonomiske udfordringer.</p>
-    <p class="center-text">Vores mål er at give alle børn mulighed for at deltage i kreative, udviklende og lærerige
-      aktiviteter, som styrker fællesskabet og glæden ved skolen. Gennem vores støtte og arrangementer bidrager vi til
-      at fremme leg, læring og socialt samvær blandt skolens elever.</p>
-  </section>
-</main>
+      <div class="card mb-4">
+        <div class="card-body">
+          <h4 class="card-title text-center">Vision</h4>
+          <p class="card-text">Vennekredsen har som formål at skabe en inkluderende og berigende skoleoplevelse for alle
+            børn på Hashøjskolen.</p>
+          <p class="card-text">Vi arbejder målrettet for at sikre, at ingen elever udelukkes fra skolens aktiviteter på
+            grund af økonomiske udfordringer.</p>
+        </div>
+      </div>
 
-<!-- Footer -->
-<footer class="bg-dark text-white text-center py-4">
-  <p>&copy; 2024 Vennekredsen. Alle rettigheder forbeholdes.</p>
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title text-center">Værdier</h4>
+          <p class="card-text">Vores mål er at give alle børn mulighed for at deltage i kreative, udviklende og lærerige
+            aktiviteter, som styrker fællesskabet og glæden ved skolen. Gennem vores støtte og arrangementer bidrager vi til
+            at fremme leg, læring og socialt samvær blandt skolens elever.</p>
+          
+          <div class="row mt-4">
+            <div class="col-md-4 text-center">
+              <h5>Fællesskab</h5>
+              <p>Vi tror på at stærke fællesskaber skaber trygge rammer for børnenes udvikling</p>
+            </div>
+            <div class="col-md-4 text-center">
+              <h5>Inklusion</h5>
+              <p>Alle børn skal have mulighed for at deltage i aktiviteter uanset baggrund</p>
+            </div>
+            <div class="col-md-4 text-center">
+              <h5>Engagement</h5>
+              <p>Vi engagerer os aktivt i at skabe positive oplevelser for skolens børn</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-</footer>
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-4">
+    <p>&copy; 2024 Vennekredsen. Alle rettigheder forbeholdes.</p>
+  </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
