--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -7,6 +7,26 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <style>
+        /* Page-specific style overrides for contrast fixes */
+        .card {
+            background-color: #444 !important;
+        }
+        .card-body {
+            color: #fff !important;
+        }
+        label {
+            color: #fff !important;
+        }
+        .alert-success {
+            background-color: rgba(40, 167, 69, 0.2) !important;
+            color: #8fd19e !important;
+        }
+        .alert-danger {
+            background-color: rgba(220, 53, 69, 0.2) !important;
+            color: #f1aeb5 !important;
+        }
+    </style>
 </head>
 <body>
     <!--Navigation bar-->
