--- a/frontend/html/tilmelding.html
+++ b/frontend/html/tilmelding.html
@@ -7,6 +7,24 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <style>
+        /* Page-specific style overrides for contrast fixes */
+        .card-text {
+            color: #fff !important;
+        }
+        .alert-info {
+            color: #8ee0f1 !important;
+        }
+        .alert-success {
+            color: #8fd19e !important;
+        }
+        small.text-muted {
+            color: #adb5bd !important;
+        }
+        .card h4, .card h5 {
+            color: #fff !important;
+        }
+    </style>
 </head>
 <body>
     <!--Navigation bar-->
