--- a/frontend/html/tilmelding.html
+++ b/frontend/html/tilmelding.html
@@ -53,7 +53,9 @@
                             <p class="card-text">Vi vil gerne invitere dig til at deltage i vores kommende fester og arrangementer. Tilmeld dig via linket herunder.</p>
                             
                             <div class="alert alert-info" role="alert">
-                                <strong>Næste arrangement:</strong> Sommerfest den 14. juni 2024
+                                <strong>Sommerfest:</strong> den 29. august 2025
+                                <strong>Julefest:</strong> den 28. November 2025
+                                <strong>Fastelavn:</strong> den 20. februar 2026
                             </div>
                             
                             <div class="text-center my-4">
