--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -76,13 +76,12 @@
                                 </button>
                             </div>
                             
-                            <!-- Debug output
+                            <!-- Debug output -->
                             <div class="mt-4">
                                 <p>Status: <span id="loginStatus">Klar til login</span></p>
                                 <pre id="debugInfo" class="p-2 mt-2" style="display: none; max-height: 150px; overflow: auto;"></pre>
                                 <button type="button" onclick="toggleDebug()" class="btn btn-sm btn-secondary mt-2">Vis/skjul debug info</button>
                             </div>
-                             -->
                         </div>
                     </div>
                 </section>
