--- a/frontend/html/navbar.html
+++ b/frontend/html/navbar.html
@@ -60,7 +60,7 @@
             <a class="nav-link" href="tilmelding.html">Tilmelding</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ansogning.html">Søg støtte</a>
+            <a class="nav-link" href="ansogning.html">Ansøg Vennekredsen</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="login.html">Login</a>
