--- a/frontend/html/ansogning.html
+++ b/frontend/html/ansogning.html
@@ -95,6 +95,7 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <h4 class="card-title text-center">Indsend din ansøgning</h4>
+                            <h5 class="card-title text-center">Årlig pulje på 5000 kr.</h5>
 
                             <div id="formResponseMessage" class="alert d-none" role="alert"></div>
 
@@ -156,19 +157,19 @@
 
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title text-center">Godkendte projekter</h4>
+                            <h4 class="card-title text-center">Godkendte Ansøgninger</h4>
 
                             <div class="text-center mb-3" id="loadingApplications">
                                 <div class="spinner-border text-primary" role="status">
                                     <span class="sr-only">Indlæser...</span>
                                 </div>
-                                <p>Henter godkendte projekter...</p>
+                                <p>Henter godkendte Ansøgninger...</p>
                             </div>
 
                             <div id="approvedProjects" class="list-group mt-4"></div>
 
                             <div id="noApprovedProjects" class="alert alert-info text-center d-none mt-3">
-                                Der er ingen godkendte projekter at vise.
+                                Der er ingen godkendte Ansøgninger at vise.
                             </div>
 
                             <div class="alert alert-success mt-3">
