--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -67,24 +67,26 @@
       <div class="card mb-4">
         <div class="card-body">
           <h4 class="card-title">Hvad støtter vi?</h4>
-          <p class="card-text">Gruppen samler penge ind til at støtte forskellige aktiviteter og faciliteter, der gør hverdagen både sjovere
+          <p class="card-text text-center">Gruppen samler penge ind til at støtte forskellige aktiviteter og faciliteter, der gør hverdagen både sjovere
             og mere lærerig for skolens elever.</p>
-          <p class="card-text">De midler, som Vennekredsen indsamler, bliver brugt til en række formål, der alle har til hensigt at berige
-            børnenes skoleoplevelse. Pengene går blandt andet til kreative lege, der stimulerer børnenes fantasi og sociale
-            færdigheder. Derudover bidrager støttegruppen også økonomisk til skolens lejrture, hvilket giver alle børn
-            mulighed for at deltage, uanset deres families økonomiske situation.</p>
+            <p class="text-center">Støtter blandt andet:</p>
+            <li>Leg og aktiviteter – Støtte til kreative lege, der fremmer børns fantasi og sociale færdigheder. </li>
+            <li>Lejrture – Økonomisk hjælp til skolens lejrture, så alle børn kan deltage uanset økonomisk situation. </li>
+            <li>Faciliteter og udstyr – Støtte til forbedring af skolens faciliteter og materialer, der gavner eleverne. </li>
+            <li>Arrangementer – Støtte til arrangementer, der skaber fællesskab og glæde blandt eleverne.</li>
+          </p>
         </div>
       </div>
 
       <div class="card">
         <div class="card-body">
           <h4 class="card-title">Hvordan tjener vi penge?</h4>
-          <p class="card-text">Vennekredsen tjener penge gennem tre årlige fester, som de arrangerer for skolens børn. Disse fester inkluderer
+          <p class="card-text text-center">Vennekredsen tjener penge gennem tre årlige fester, som de arrangerer for skolens børn. Disse fester inkluderer
             en sommerfest, en julefest og en fastelavnsfest. Udover at skabe glæde og fællesskab blandt eleverne, bidrager
             festerne også til at samle penge ind. Gennem disse arrangementer formår Vennekredsen at indsamle mellem 10.000 og
             15.000 kr. årligt. Disse midler er en vigtig økonomisk støtte for at forbedre midlerne for de børn, der går på
             skolen.</p>
-          <p class="card-text">Med Vennekredsens indsats sikres det, at alle børn på Hashøjskolen får mulighed for at deltage i aktiviteter, der
+          <p class="card-text text-center">Med Vennekredsens indsats sikres det, at alle børn på Hashøjskolen får mulighed for at deltage i aktiviteter, der
             udvikler dem både fagligt og socialt, og som giver dem minder for livet.</p>
         </div>
       </div>
